# color_mapping

./: CMakeLists.txt  Simplify.h  color_mapping.cpp  contour.cpp  generate.h  readme.md  颜色映射.md  颜色映射调研.md
glad/include/glad/: glad.h
glad/src/: glad.c
shader/: contour.fs  createTexture.fs  render.fs  render.vs
